Database partly integrated